			   XPCE ChangeLog
			   ==============


VERSION 6.5.36, distributed with SWI-Prolog 5.5.36
==================================================

* FIXED: Various 64-bit compiler warnings.  One of them caused
  `graphical->layout' to do the layout in the area (0,0,0,0).
  Another causes a crash in class spatial.  Anders Bouwer.

VERSION 6.5.35, distributed with SWI-Prolog 5.5.35
==================================================

* ADDED: display_manager<-window_of_last_event

VERSION 6.5.34, distributed with SWI-Prolog 5.5.34
==================================================

* PORT: Cleanup for GCC 4.0

* ADDED: Start of interface to add classes from C at runtime.

VERSION 6.5.33, distributed with SWI-Prolog 5.5.33
==================================================

* FIXED: Win32: display<-win_file_name: honour default directory.
  Jelmer Jellema.

* ADDED: head/body argument do `_draw_post_script'.  Jelmer Jellema.

* ADDED: library(swi/pce_debug_monitor).

* FIXED: avoid warning on M-q in Prolog mode (->indent_clause).

VERSION 6.5.31, distributed with SWI-Prolog 5.5.31
==================================================

VERSION 6.5.30, distributed with SWI-Prolog 5.5.30
==================================================

* ADDED: library(print_graphics), method ->save_postscript

VERSION 6.5.29, distributed with SWI-Prolog 5.5.29
==================================================
	
* FIXED: `unclip window' recursive event processing (leaving empty `unclip'
  windows behind.

* FIXED: Windows: draw bitmap objects on printer and metafile.

* FIXED: Bug#87: conversion of wide-string to source_location object.
  Dmitry.

* ADDED: Partial support for creating proper PostScript from masked
  colour images (often used as icons).

* FIXED: crash in `graphical<-postscript' for graphicals with zero width
  and/or height (sometimes used to fill space).


VERSION 6.5.28, distributed with SWI-Prolog 5.5.28
==================================================
	